--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">CarBot</string>
     <string name="action_settings">Settings</string>
     <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
 </resources>
